--- a/Chalkable.Web/assets/jade/controls/labeled-checkbox.jade
+++ b/Chalkable.Web/assets/jade/controls/labeled-checkbox.jade
@@ -1,6 +1,6 @@
-mixin LabeledCheckbox(text, name, val)
+mixin LabeledCheckbox(text, name, val, isReadOnly)
     .labeled-checkbox
-        +Checkbox(name, val).checkbox
+        +Checkbox(name, val, isReadOnly).checkbox
         label(for=name)=text
 
 
