--- a/Chalkable.Web/assets/jade/controls/slide-checkbox.jade
+++ b/Chalkable.Web/assets/jade/controls/slide-checkbox.jade
@@ -1,10 +1,13 @@
-mixin SlideCheckbox(name, val)
+mixin SlideCheckbox(name, val, isReadOnly)
+    -console.log('readonly', isReadOnly)
     .slide-checkbox(attributes)
         .wrapper
             +Hidden(name, false)
             -attributes.checked = val
             input(id=name, name = name, type="checkbox")(attributes)
-            label(for=name)
-
+            if !isReadOnly
+                label(for=name)
+            else
+                label
 
 
