--- a/Chalkable.Web/assets/jade/controls/checkbox.jade
+++ b/Chalkable.Web/assets/jade/controls/checkbox.jade
@@ -1,5 +1,6 @@
-mixin Checkbox(name, val)
+mixin Checkbox(name, val, isReadOnly)
     -attributes.checked = val;
+    -attributes.disabled = isReadOnly
     -self.prepareData(name, val);
     +Hidden(name, false)(data-value=val, class="hidden-checkbox")
     input(id=name, name = name, type="checkbox")(attributes)
