move jquery related scripts

--- a/Chalkable.Web/Views/Developer/DeveloperDocs.cshtml
+++ b/Chalkable.Web/Views/Developer/DeveloperDocs.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Developer_Docs";
+    ViewBag.Title = "Developer Documentation";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -527,13 +527,12 @@ function getMe()
 
 @section BottomScripts {
 
-    <script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/jquery-ui.min.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/all_not_minified.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/signIn_Flip_Shake.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/waypoints.min.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/cycle.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/prettify.js")"></script>
-    <script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/jquery.fancybox.js")"></script>
+    <script type="text/javascript" src="@Url.StaticContent("/app/jquery/jquery.fancybox.js")"></script>
 
     <script type="text/javascript">
        
