added general info page

--- a/Chalkable.Web/assets/jade/sidebars/DeveloperSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/DeveloperSidebar.jade
@@ -1,4 +1,4 @@
-+ActionLink('developer', 'general')#home-logo
++ActionLink('apps', 'general')#home-logo
 #sidebar-controls
     .search-wrapper
         #search-bar
