--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -19,6 +19,8 @@
 @import "partials/main/developer/_info";
 
 @import "partials/main/developer/_app";
+@import "partials/main/developer/_app_general";
+//@import "partials/main/developer/_docs";
 @import "partials/main/sysadmin/_apps";
 @import "partials/main/popups/_popups";
 
