fixed missing link

--- a/Chalkable.Web/Views/Developer/SignUp.cshtml
+++ b/Chalkable.Web/Views/Developer/SignUp.cshtml
@@ -15,7 +15,7 @@
 	        <div class="demo_container">
                 <ul id="nav1">
                     <li><a href="@Url.Content("~/#start")"><img src="@Url.StaticContent("/Content/images/common/nav-logo-150.png")" class="navlogo_faq developers"></a></li>
-                    <li><a href="@Url.Content("~/Account/Developers")"><h3 class="dev_nav_logo">Developers</h3></a></li>
+                    <li><a href="@Url.Content("~/Developer/Info")"><h3 class="dev_nav_logo">Developers</h3></a></li>
                     <li class="loginnav dev one"><a href="@Url.Content("~/")" class="noscroll" style="width:100px !important;">Sign in</a></li>
                 </ul>
 	        </div>
