--- a/Chalkable.Web/Views/Developer/DeveloperDocs.cshtml
+++ b/Chalkable.Web/Views/Developer/DeveloperDocs.cshtml
@@ -529,8 +529,8 @@ function getMe()
 
     <script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/all_not_minified.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/signIn_Flip_Shake.js")"></script>
-    <script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/waypoints.min.js")"></script>
-    <script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/cycle.js")"></script>
+    <script type="text/javascript" src="@Url.StaticContent("/app/jquery/jquery.waypoints.min.js")"></script>
+    <script type="text/javascript" src="@Url.StaticContent("/app/jquery/jquery.cycle.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/prettify.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/app/jquery/jquery.fancybox.js")"></script>
 
