--- a/Chalkable.Web/Views/Home/Index.cshtml
+++ b/Chalkable.Web/Views/Home/Index.cshtml
@@ -192,7 +192,7 @@
 				<h3>ARE YOU READY?</h3>
 				<ul class="btn_grp">
 					<div id="lowerbuttons" class="index" style="padding-bottom: 30px;">
-                        <a href="@Url.Content("~/DemoSchool/Demo")" class="demo-button"></a>
+                        <a href="@Url.Content("~/DemoSchool/Index")" class="demo-button"></a>
                         <a href="@Url.Content("~/SignUp/Admin")" class="signup-button"></a>
 					</div>
 				</ul>
