--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -106,6 +106,10 @@ html, body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fiel
   padding: 0;
 }
 
+ol, ul {
+  list-style: none;
+}
+
 .clear{clear:both;}
 
 .clear-right{clear:right;}
